cmake_minimum_required(VERSION 3.20)
project(atbt)

set(CMAKE_CXX_STANDARD 14)

add_executable(CMAKE_ROOT
        assignments/10757.cpp
#        assignments/14425.cpp
#        assignments/1764.cpp
#        assignments/18870.cpp
#        assignments/19636.cpp
#        assignments/2015.cpp
#        assignments/4358.cpp
#        assignments/9375.cpp
        )
