cmake_minimum_required(VERSION 3.20)
project(atbt)

set(CMAKE_CXX_STANDARD 14)

add_executable(CMAKE_ROOT
        #examples/2609.cpp
        #examples/2960.cpp
        #examples/16563.cpp
        #examples/14490.cpp
        #assignments/11050.cpp
        #assignments/9613.cpp
        #assignments/6588.cpp
        #assignments/2841.cpp
        assignments/20302.cpp)
