cmake_minimum_required(VERSION 3.20)
project(atbt)

set(CMAKE_CXX_STANDARD 14)

add_executable(CMAKE_ROOT
        #examples/11279.cpp
        #examples/2075.cpp
        #assignments/11000.cpp
        #assignments/11286.cpp
        #assignments/11723.cpp
        #assignments/12018.cpp
        #assignments/15903.cpp
        #assignments/2493.cpp
        #assignments/3613.cpp
        assignments/7662.cpp
        )
