cmake_minimum_required(VERSION 3.20)
project(atbt)

set(CMAKE_CXX_STANDARD 17)

add_executable(CMAKE_ROOT
        #examples/10828.cpp
        #examples/10845.cpp
        #examples/4949.cpp
        #examples/2164.cpp
        #assignments/10866.cpp
        #assignments/20920.cpp
        #assignments/1935.cpp
        #assignments/1918.cpp
        #assignments/5430.cpp
        assignments/kakao_crane.cpp)
